[package]
name = "aof-script"
version = "0.1.0"
authors = ["cpsdqs <cpsdqs@gmail.com>"]
edition = "2018"

[[bin]]
name = "aof-script-exec"
path = "src/main.rs"

[dependencies]
deno_core = "0.69"
deno_web = "0.20"
deno-dom = { path = "deno-dom" }
smol = "1.2"
tokio =  { version = "0.2", features = ["full"] }
futures = "0.3"
thiserror = "1.0.21"
serde = "1.0"
reqwest = { version = "0.10", features = ["gzip", "stream"] }
