[workspace]

[package]
name = "aofc"
version = "0.1.0"
authors = ["cpsdqs <cpsdqs@gmail.com>"]
edition = "2018"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"] # fix wasm-opt being broken

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aes-gcm = "0.8"
pbkdf2 = "0.6"
hmac = "0.10"
sha2 = "0.9"
rand = { version = "0.7", features = ["wasm-bindgen"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
base64 = "0.13"
serde = "1.0"
postcard = { version = "0.5", features = ["use-std"] }
